Portfolio update April 23

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Noah Lopez | Software Engineer based in Bellevue, Washington.
+    Noah Lopez | Software Engineer based in Santa Monica, California.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -43,7 +43,7 @@
           <span> <i> Heyyo! </i>  <b style="color:red !important"> I'm Noah. </b> </span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Software Engineer based in Bellevue, Washington.</p>
+        <p>A Software Engineer based in Santa Monica, California.</p>
         <a href=".\resume.pdf" class="btn btn--pink">My Resume</a>
       </div>
     </div>
@@ -113,8 +113,8 @@
         <div class="experience__content">
           <div class="experience__text">
             <!-- Replace the below paragraph with info about yourself -->
-            <h4> Associate Software Engineer (DevOps)</h4>
-            <h4> 2019-Present </h4>
+            <h4> DevOps Engineer</h4>
+            <h4> 2019-2022 </h4>
             <p>
 
             </p>
@@ -125,6 +125,29 @@
           <div class="experience__photo-container">
             <!-- Add a nice photo of yourself -->
             <img class="experience__photo" src="./images/nintendo.png" alt="" />
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="experience__content">
+          <div class="experience__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <h4> Associate Programmer (Tools)</h4>
+            <h4> 2022-2023</h4>
+            <p>
+
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
+
+          <div class="experience__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="experience__photo" src="./images/nd.png" alt="" />
           </div>
         </div>
       </div>
