--- a/index.html
+++ b/index.html
@@ -59,6 +59,51 @@
         <div class="experience__content">
           <div class="experience__text">
             <!-- Replace the below paragraph with info about yourself -->
+            <h4> Core Tech Programmer</h4>
+            <h4> 2022-Present</h4>
+            <p>
+
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
+
+          <div class="experience__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="experience__photo" src="./images/nd.png" alt="" />
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="experience__content">
+          <div class="experience__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <h4> DevOps Engineer</h4>
+            <h4> 2019-2022 </h4>
+            <p>
+
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
+
+          <div class="experience__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="experience__photo" src="./images/nintendo.png" alt="" />
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="experience__content">
+          <div class="experience__text">
+            <!-- Replace the below paragraph with info about yourself -->
             <h4> BA - Computer Science</h4>
             <h4> Minor - Theater & Performance Studies</h4>      
             <h4> 2014-2018 </h4>         
@@ -105,49 +150,6 @@
           <div class="experience__photo-container">
             <!-- Add a nice photo of yourself -->
             <img class="experience__photo" src="./images/ucb.png" alt="" />
-          </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <div class="experience__content">
-          <div class="experience__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <h4> DevOps Engineer</h4>
-            <h4> 2019-2022 </h4>
-            <p>
-
-            </p>
-            <!-- Provide a link to your resume -->
-            <!-- <a href="#" class="btn">My Resume</a> -->
-          </div>
-
-          <div class="experience__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="experience__photo" src="./images/nintendo.png" alt="" />
-          </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="experience__content">
-          <div class="experience__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <h4> Associate Programmer (Tools)</h4>
-            <h4> 2022-2023</h4>
-            <p>
-
-            </p>
-            <!-- Provide a link to your resume -->
-            <!-- <a href="#" class="btn">My Resume</a> -->
-          </div>
-
-          <div class="experience__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="experience__photo" src="./images/nd.png" alt="" />
           </div>
         </div>
       </div>
